Adds service for episode
